[tool.poetry]
name = "llamacpp-environment"
version = "0.1.0"
description = "llamacpp environment"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
