[tool.poetry]
name = "llamacpp-environment"
version = "0.1.0"
description = "llamacpp environment"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.12"

[tool.poetry.group.huggingface.dependencies]
huggingface-hub = "0.36.0"

[tool.poetry.group.llm.dependencies]
sentencepiece = "0.2.1"
tiktoken = "0.12.0"
gguf = "0.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
